--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -56,6 +56,7 @@
 
 
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/login_button_login"
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:layout_alignParentBottom="true"
