--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -64,6 +64,7 @@
 
 
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/register_button"
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:layout_alignParentBottom="true"
