Made several changes

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="dark_purple">#2B0752</color>
     <color name="light_purple">#451873</color>
     <color name="pink">#EF443B</color>
+    <color name="gray">#393737</color>
 </resources>
