--- a/app/src/main/res/layout/fragment_lesson_detail.xml
+++ b/app/src/main/res/layout/fragment_lesson_detail.xml
@@ -8,16 +8,19 @@
 
     <TextView
         android:id="@+id/lesson_detail_title"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
+        android:layout_marginEnd="8dp"
         android:layout_height="wrap_content"
-        tools:text="Matematik"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="20dp"
         android:textColor="@color/black"
         android:textSize="22sp"
         android:textStyle="bold"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
+        app:layout_constraintEnd_toStartOf="@+id/lesson_detail_make_lesson_online"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Matematik" />
 
     <TextView
         android:id="@+id/lesson_detail_attempts"
@@ -59,4 +62,12 @@
         app:layout_constraintEnd_toEndOf="@+id/lesson_detail_remove_button"
         app:layout_constraintStart_toStartOf="@+id/lesson_detail_attempts"
         app:layout_constraintTop_toBottomOf="@+id/lesson_detail_attempts" />
+
+    <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/lesson_detail_make_lesson_online"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@+id/lesson_detail_qr_code_button"
+        app:layout_constraintEnd_toStartOf="@+id/lesson_detail_qr_code_button"
+        app:layout_constraintTop_toTopOf="@+id/lesson_detail_qr_code_button" />
 </androidx.constraintlayout.widget.ConstraintLayout>
