--- a/app/src/main/res/layout/row_lessons_item.xml
+++ b/app/src/main/res/layout/row_lessons_item.xml
@@ -53,7 +53,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/lesson_attempt_count"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        tools:text="Yavuz Canbay" />
+        tools:text="1. hafta" />
 
     <ImageView
         android:id="@+id/imageView"
